# gemini-review-action

./: .codespellrc  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  gemini-review.toml  gemini-triage.toml  gemini_issue_triage.py  gemini_pr_review.py  pyproject.toml  test.md
.github/workflows/: ci.yml  gemini-review.yml  gemini-triage.yml
docs/: architecture.md  developer_knowledge.md
gemini_review/: __init__.py  config.py  developer_knowledge.py  github.py  personas.py  prompts.py  schemas.py  skills.py  utils.py
starter-examples/: gemini-review.toml  gemini-review.yml  gemini-triage.yml
starter-examples/skills/agent-platform-eval-flywheel/scripts/: compare_results.py  endpoint_evaluation.py  inspect_results.py  maas_evaluation.py  parse_adk_traces.py  render_html_report.py  validate_dataset.py
starter-examples/skills/agent-platform-inference/scripts/: gemini_genai_sdk.py  gemini_openai_sdk.py  gemini_vertexai_sdk.py  openmaas_genai_sdk.py  openmaas_openai_sdk.py  openmaas_vertexai_sdk.py
starter-examples/skills/agent-platform-skill-registry/scripts/: skill_registry_ops.py  validate_env.py
starter-examples/skills/agent-platform-tuning/scripts/: calculate_cost.py  cancel_tuning_job.py  monitor_tuning_job.py  prepare_dataset.py  tune_open_model.py
starter-examples/skills/gemini-managed-agents-api/: SKILL.md
tests/: test_issue_triage.py  test_pr_review.py
