[project]
name = "gemini-review-action"
version = "1.3.0"
description = "Automated Pull Request code reviews and Issue Triage using Google Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "requests>=2.31.0",
    "pydantic>=2.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "codespell>=2.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
